# RSSReaderSmartAssist

./: CMakeLists.txt  README.txt
include/network/: RSSreader.h
include/utility/: Constant.h  Logger.h  XMLParser.h
src/: Constant.cpp  Logger.cpp  RSSReaderSmartAssist.cpp  RSSReaderSmartAssistConfig.in  RSSreader.cpp  XMLParser.cpp  main.cpp
